Fixes button alignment issues

--- a/components/shared/components/EffektButton/EffektButton.module.scss
+++ b/components/shared/components/EffektButton/EffektButton.module.scss
@@ -99,6 +99,10 @@
   margin-left: 25px;
 }
 
+.noMinWidth {
+  min-width: 0;
+}
+
 .disabledBtn {
   opacity: 0.5;
 }
