--- a/components/shared/components/RadioButton/RadioButtons.module.scss
+++ b/components/shared/components/RadioButton/RadioButtons.module.scss
@@ -28,7 +28,7 @@
 
 .radiobuttonlabel {
   height: 1.5em;
-  padding-left: 2rem;
+  padding-left: 2em;
   padding-top: 0.25em;
   position: relative;
   cursor: pointer;
