--- a/components/shared/layout/Navbar/Navbar.module.scss
+++ b/components/shared/layout/Navbar/Navbar.module.scss
@@ -237,6 +237,10 @@
     margin-top: auto;
   }
 
+  .navbar ul li.buttonsWrapper a {
+    width: auto;
+  }
+
   .navbar ul li.buttonsWrapper button:first-child { 
     margin-left: 0;
   }
